# git-trophy

./: .gitignore  Cargo.toml  LICENSE  README.md
model/: .gitignore  main.py  requirements.txt
src/: cli.rs  main.rs  model.rs
