[package]
name = "git-trophy"
version = "0.1.0"
edition = "2021"
authors = ["PicoJr <picojr_dev@gmx.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
clap = {version="3.1.12", features=["cargo"]}
anyhow = "1.0.57"
chrono = "0.4.19"
rust-3d = "0.34.0"
ttf2mesh = "0.2.1"
nalgebra = "0.33.2"